--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
 <div class="container">
   <div class="sidebar1">
     <ul class="nav">
-      <li><a href="nuevaPagina.html" target="_self">Pagina 2</a><a href="#"></a></li>
+      <li><a href="index.html" target="_self">Pagina 2</a><a href="#"></a></li>
       <li><a href="#">Link two</a></li>
       <li><a href="#">Link three</a></li>
       <li><a href="#">Link four</a></li>
@@ -51,13 +51,13 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
 <div class="dropdown">
   <button class="dropbtn">Dropdown</button>
   <div class="dropdown-content">
-    <a href="nuevaPagina.html">Link 1</a>
+    <a href="index.html">Link 1</a>
     <a href="#top">Link 2</a>
     <a href="#">Link 3</a>
   </div>
 </div>
 <p>Espera</p>
-<button type="button" id="proceed"  onclick="window.open('https://www.clouditeducation.com/pruebas/nuevaPagina.html', '_blank')">Continua</button>
+<button type="button" id="proceed"  onclick="window.open('https://kfjaramillo.github.io/PaginaPruebas/', '_blank')">Continua</button>
 <h1>Pruebas locales</h1>
 <table width="200" border="1" id="primera" name="tabla_prueba">
   <tr id="importante" class="rojo">
@@ -111,7 +111,7 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
     </p>
     <p>&nbsp;</p>
     <div class="container" id="All">Submit 
-      <input name="Buton1" type="submit" id="Buton1" onclick="window.open('https://www.clouditeducation.com/pruebas/nuevaPagina.html', '_blank')" value="Submit" />
+      <input name="Buton1" type="submit" id="Buton1" onclick="window.open('https://kfjaramillo.github.io/PaginaPruebas/', '_blank')" value="Submit" />
       <select name="ingrediente" id="ingrediente">
         <option value="maiz">Maiz</option>
         <option value="cebolla">Cebolla</option>
@@ -191,7 +191,7 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
 </div>
     </div>
     <p>&nbsp;</p>
-    <p>		<iframe id="pruebas-iframe" src="nuevaPagina.html" name="iframe-name" style="width: 100%; height: 600px" scrolling="yes" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0">
+    <p>		<iframe id="pruebas-iframe" src="index.html" name="iframe-name" style="width: 100%; height: 600px" scrolling="yes" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0">
 		</iframe><br />
     </p>
    
